/* 
  Localizable.strings
  DecAR

  Created by iosdev on 25.11.2022.
  
*/
"menuMapText" = "Map";
"menuSettingsText" = "Settings";
"menuFurnitureText" = "Furniture Menu";
"menuListingsText" = "Listings";
"settingsLang" = "Finnish 🇫🇮";
"listingsClientName" = "Client name: ";
"listingsClientAddress" = "Client address: ";
"listingsAddBtn" = "Add";
"listingsAlertAddListing" = "Add listing";
"listingsClientName2" = "Client name";
"listingsClientAddress2" = "Client address";
"listingsBtnCancel" = "Cancel";
"listingsDetails" = "Enter listing details.";
"listingsSelectItem" = "Select an item";
"furnitureName" = "Furniture name: ";
"furnitureAlertAddFurniture" = "Add furniture";
"furnitureFurnitureName" = "Furniture name";
"furnitureEnterFurnitureDetails" = "Enter furniture details.";
"furnitureSelectItem" = "Select an item";
